--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -25,7 +25,7 @@
     <div class="intro">
       <div class="wrapper">
         <div class="typing-demo">
-          Welcome to the game! My name is Mahmoud and I will be your oppenent, Do you wanna try?
+          Welcome to the game! My name is Mahmoud and I will be your opponent, Do you wanna try?
         </div>
       </div>
       <br><br>
