--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -118,7 +118,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor's degree</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> mahdarwish2@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> mahdarwish2@gmail.com</li>
                 </ul>
               </div>
             </div>
