--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile">
-        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="/assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mahmoud Darwish</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/profile.php?id=100009040455063" target="_blank" class="facebook"><i
@@ -101,7 +101,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile.jpg" class="img-fluid" style="border-radius: 15em;" alt="">
+            <img src="/assets/img/profile.jpg" class="img-fluid" style="border-radius: 15em;" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <br><br><br><br>
