--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile">
-        <img src="/assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mahmoud Darwish</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/profile.php?id=100009040455063" target="_blank" class="facebook"><i
