--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,6 @@
           <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#skills"><i class="bx bx-code-alt"></i> <span>Skills</span></a></li>
-          <li><a href="#portfolio"><i class="bx bxs-palette"></i> Hobbies</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -66,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Mahmoud Darwish</h1>
-      <p>I'm <span class="typed" data-typed-items="Web Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="A Computer Science Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
