--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Mahmoud Darwish</h1>
-      <p>I'm <span class="typed" data-typed-items="A Computer Science Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Computer Science Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
